[package]
name = "iroha2-longevity-load-rs"
version = "2.0.0-pre-rc.11"
edition = "2021"

[dependencies]
serde_json = "1.0.73"
serde = "1.0.132"
structopt = "0.3.25"
color-eyre = "0.6.1"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
strum = "0.24"
strum_macros = "0.24"
async-trait = "0.1.57"
futures-util = "0.3"
rand = "0.8.4"

  [dependencies.tokio]
  version = "1"
  features = [ "macros", "rt-multi-thread" ]

  [dependencies.hyper]
  version = "0.14"
  features = [ "client", "server" ]

  [dependencies.chrono]
  version = "0.4"
  features = [ "serde" ]

  [dependencies.iroha_client]
  git = "https://github.com/hyperledger/iroha.git"
  branch = "iroha2-dev"
  version = "2.0.0-pre-rc.11"

  [dependencies.iroha_data_model]
  git = "https://github.com/hyperledger/iroha.git"
  branch = "iroha2-dev"
  version = "2.0.0-pre-rc.11"

  [dependencies.iroha_config]
  git = "https://github.com/hyperledger/iroha.git"
  branch = "iroha2-dev"
  version = "2.0.0-pre-rc.11"

  [dependencies.iroha_crypto]
  git = "https://github.com/hyperledger/iroha.git"
  branch = "iroha2-dev"
  version = "2.0.0-pre-rc.11"

  [dependencies.iroha_primitives]
  git = "https://github.com/hyperledger/iroha.git"
  branch = "iroha2-dev"
  version = "2.0.0-pre-rc.11"
